--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
   "dependencies": {
     "@google-cloud/storage": "^1.7.0",
+    "apollo-server-express": "^1.3.6",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "express-graphql": "^0.6.12",
+    "graphql": "^0.13.2",
+    "graphql-tools": "^3.0.2",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.1.5",
     "morgan": "^1.9.0",
-    "multer": "^1.3.0"
+    "multer": "^1.3.0",
+    "path": "^0.12.7"
   },
   "name": "server",
   "description": "eight-Gram server side",
