--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "main": "app.js",
   "devDependencies": {},
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "node ./bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
